--- a/LogMergeRx/LogViewer/LogViewerView.xaml
+++ b/LogMergeRx/LogViewer/LogViewerView.xaml
@@ -1,10 +1,10 @@
 ﻿<UserControl x:Class="LogMergeRx.LogViewer.LogViewerView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:LogMergeRx.LogViewer"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DataContext="{d:DesignInstance Type=local:LogViewerViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
@@ -15,81 +15,57 @@
             Notice="Black"
             />
     </UserControl.Resources>
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <ToolBar Grid.Row="0" Margin="3,0,3,3">
-            <CheckBox Content="Errors" IsChecked="{Binding ShowErrors.Value}" />
-            <CheckBox Content="Warnings" IsChecked="{Binding ShowWarnings.Value}" />
-            <CheckBox Content="Notices" IsChecked="{Binding ShowNotices.Value}" />
-            <CheckBox Content="Infos" IsChecked="{Binding ShowInfos.Value}" />
-            <Separator />
+    <Grid >
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200" />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <StackPanel Margin="5">
+            <Label Content="Level"/>
+            <UniformGrid Rows="1" Columns="4">
+                <ToggleButton Content="Errors" IsChecked="{Binding ShowErrors.Value}" />
+                <ToggleButton Content="Warnings" IsChecked="{Binding ShowWarnings.Value}" />
+                <ToggleButton Content="Notices" IsChecked="{Binding ShowNotices.Value}" />
+                <ToggleButton Content="Infos" IsChecked="{Binding ShowInfos.Value}" />
+            </UniformGrid>
             <Label Content="Include only matching"/>
-            <TextBox Text="{Binding IncludeRegex.Value}" Width="200" />
-            <Separator />
+            <TextBox Text="{Binding IncludeRegex.Value}" />
             <Label Content="Exclude matching"/>
-            <TextBox Text="{Binding ExcludeRegex.Value}" Width="200" />
-        </ToolBar>
-        <ToolBar Grid.Row="1" Margin="3,0,3,3">
+            <TextBox Text="{Binding ExcludeRegex.Value}" />
             <Label Content="Search"/>
-            <TextBox Text="{Binding SearchRegex.Value, UpdateSourceTrigger=PropertyChanged}" Width="200" />
-            <Button Content="Prev" Command="{Binding PrevIndex}" />
-            <Button Content="Next" Command="{Binding NextIndex}" />
-            <TextBlock Text="{Binding ScrollToIndex.Value}" />
-        </ToolBar>
-        <ItemsControl Grid.Row="3" ItemsSource="{Binding ItemsSource}"
-                      VirtualizingPanel.ScrollUnit="Pixel"
-                      VirtualizingPanel.VirtualizationMode="Standard">
-            <ItemsControl.Template>
-                <ControlTemplate>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition SharedSizeGroup="First" Width="200" />
-                            <ColumnDefinition SharedSizeGroup="Second" Width="200" />
-                            <ColumnDefinition SharedSizeGroup="Third" />
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
-                        <TextBlock Grid.Column="0" Text="Date" />
-                        <TextBlock Grid.Column="1" Text="Level" />
-                        <TextBlock Grid.Column="2" Text="Message" />
+            <TextBox Text="{Binding SearchRegex.Value, UpdateSourceTrigger=PropertyChanged}" />
+            <UniformGrid Rows="1" Columns="2">
+                <Button Content="Prev" Command="{Binding PrevIndex}" />
+                <Button Content="Next" Command="{Binding NextIndex}" />
+            </UniformGrid>
+        </StackPanel>
 
-                        <ScrollViewer Grid.Row="1" Grid.ColumnSpan="3" CanContentScroll="True" Focusable="False">
-                            <ItemsPresenter />
-                        </ScrollViewer>
-                    </Grid>
-                </ControlTemplate>
-            </ItemsControl.Template>
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <VirtualizingStackPanel
-                        local:ScrollHelper.ScrollToIndex="{Binding ScrollToIndex.Value}" />
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition SharedSizeGroup="First" Width="200" />
-                            <ColumnDefinition SharedSizeGroup="Second" Width="200" />
-                            <ColumnDefinition SharedSizeGroup="Third" />
-                        </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="{Binding Date}" Margin="3" />
-                        <TextBlock Grid.Column="1" FontWeight="Bold" Margin="3"
-                                   Text="{Binding Level}"
-                                   Foreground="{Binding Level, Converter={StaticResource LevelToForegroundConverter}}" />
-                        <TextBlock Grid.Column="2" Margin="3"
-                                   local:HighlightHelper.Text="{Binding Message}"
-                                   local:HighlightHelper.Highlight="{Binding DataContext.SearchRegex.Value, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
-                    </Grid>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
+        <DataGrid x:Name="List1" Grid.Column="1" SelectionMode="Single" ItemsSource="{Binding ItemsSource}"
+                  VirtualizingPanel.ScrollUnit="Pixel" VirtualizingPanel.VirtualizationMode="Recycling"
+                  AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Date" Width="150" Binding="{Binding Date}" />
+                <DataGridTemplateColumn Header="Level" Width="100">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Level}"
+                                        Foreground="{Binding Level, Converter={StaticResource LevelToForegroundConverter}}"
+                                       />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTextColumn Header="File Name" Binding="{Binding FileName}"/>
+                <DataGridTemplateColumn Header="Message">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock Grid.Column="4" Margin="3"
+                                    local:HighlightHelper.Text="{Binding Message}"
+                                    local:HighlightHelper.Highlight="{Binding DataContext.SearchRegex.Value, RelativeSource={RelativeSource AncestorType={x:Type local:LogViewerView}}}"
+                                       />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </UserControl>
