added multiple files filter, fixed highlight and level filters

--- a/LogMergeRx/LogViewer/LogViewerView.xaml
+++ b/LogMergeRx/LogViewer/LogViewerView.xaml
@@ -38,18 +38,20 @@
                 <Button Content="Prev" Command="{Binding PrevIndex}" />
                 <Button Content="Next" Command="{Binding NextIndex}" />
             </UniformGrid>
+            <ListBox ItemsSource="{Binding AllFiles}" SelectionMode="Extended"
+                     SelectionChanged="AllFiles_SelectionChanged" />
         </StackPanel>
 
-        <DataGrid x:Name="List1" Grid.Column="1" SelectionMode="Single" ItemsSource="{Binding ItemsSource}"
+        <DataGrid x:Name="DataGrid" Grid.Column="1" SelectionMode="Single" ItemsSource="{Binding ItemsSource}"
                   VirtualizingPanel.ScrollUnit="Pixel" VirtualizingPanel.VirtualizationMode="Recycling"
-                  AutoGenerateColumns="False">
+                  AutoGenerateColumns="False" local:ScrollHelper.ScrollToItem="{Binding ScrollToItem}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Date" Width="150" Binding="{Binding Date}" />
                 <DataGridTemplateColumn Header="Level" Width="100">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Level}"
-                                        Foreground="{Binding Level, Converter={StaticResource LevelToForegroundConverter}}"
+                                       Foreground="{Binding Level, Converter={StaticResource LevelToForegroundConverter}}"
                                        />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
@@ -59,8 +61,8 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <TextBlock Grid.Column="4" Margin="3"
-                                    local:HighlightHelper.Text="{Binding Message}"
-                                    local:HighlightHelper.Highlight="{Binding DataContext.SearchRegex.Value, RelativeSource={RelativeSource AncestorType={x:Type local:LogViewerView}}}"
+                                       local:HighlightHelper.Text="{Binding Message}"
+                                       local:HighlightHelper.Highlight="{Binding DataContext.SearchRegex.Value, RelativeSource={RelativeSource AncestorType={x:Type local:LogViewerView}}}"
                                        />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
