--- a/LogMergeRx/MainWindow.xaml
+++ b/LogMergeRx/MainWindow.xaml
@@ -47,7 +47,8 @@
         <DataGrid x:Name="DataGrid" Grid.Column="1" SelectionMode="Single" ItemsSource="{Binding ItemsSource}"
                   VirtualizingPanel.ScrollUnit="Pixel" VirtualizingPanel.VirtualizationMode="Recycling"
                   AutoGenerateColumns="False" local:ScrollHelper.ScrollToItem="{Binding ScrollToItem.Value}"
-                  BorderThickness="0" GridLinesVisibility="None" AlternatingRowBackground="#EEEEEE">
+                  BorderThickness="0" GridLinesVisibility="None" AlternatingRowBackground="#EEEEEE"
+                  SelectionUnit="FullRow">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Date" Width="150" Binding="{Binding Date}" />
                 <DataGridTemplateColumn Header="Level" Width="100">
@@ -65,7 +66,7 @@
                         <DataTemplate>
                             <TextBlock Grid.Column="4" Margin="3"
                                        local:HighlightHelper.Text="{Binding Message}"
-                                       local:HighlightHelper.Highlight="{Binding DataContext.SearchRegex.Value, RelativeSource={RelativeSource AncestorType={x:Type local:MainWindow}}}"
+                                       local:HighlightHelper.Highlight="{Binding DataContext.SearchRegex.Value, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
                                        />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
